@@ -1,7 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.609 2006/03/04 00:01:55 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.610 2006/03/05 04:16:04 agaffney Exp $
+
+  4 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIPortage.py:
+  create /tmp, /var/tmp, and /var/lib/portage with proper permissions
 
   3 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIClientController.py:
